Introdução ao JS

--- a/index.html
+++ b/index.html
@@ -143,5 +143,16 @@
         <div class="item">Item 11</div>
         <div class="item">Item 12</div>
     </div>
+
+    <script>
+        alert("Olá Mundo Eu sou um alerta");
+        document.write("Olá Mundo! Eu sou um document.write");
+        console.log("Olá Mundo! Eu sou um console!");
+        document.getElementById("primeira-div").innerHTML="Olá Mundo! Eu sou um document.getElementById"
+        var nome = prompt("Informe o seu nome");
+        document.getElementById("primeira-div").innerHTML="O seu nome é: " + nome;
+
+
+    </script>
 </body>
 </html>
